feat(devcontainer): switch from esp-idf to plateformIO
ESP idf is not compatible with esp8266 and ESP8266_RTOS_SDK is apparently unstable and aging

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,13 +1,12 @@
-ARG DOCKER_TAG=release-v5.5
-FROM espressif/idf:${DOCKER_TAG}
+FROM python:3.12.3-slim
 
 ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
 ENV EDITOR=nvim
-ARG USER=ubuntu
+ARG USER=debian
 ARG UUCP_GID=986
-ENV PATH /opt/esp/idf/components/spiffs:$PATH
-ENV ESPPORT /dev/ttyUSB0
+ENV PATH=$PATH:~/.arduino15/packages:~/Arduino/libraries:~/.platformio/penv/bin
+ENV ESPPORT=/dev/ttyUSB0
 
 RUN set -xe; \
     apt-get update \
@@ -16,23 +15,33 @@ RUN set -xe; \
         build-essential \
         clang-tidy \
         cppcheck \
+        curl \
+        git \
         liblwip-dev \
         neovim \
+        sudo \
         udev \
         usbutils \
-        sudo \
+    && useradd -m ${USER} \
     && echo "source /opt/esp/idf/export.sh > /dev/null 2>&1" >> /home/${USER}/.bashrc \
     && chown -R ${USER}:${USER} /usr \
     && usermod -aG sudo ${USER} \
     && chown root:root /usr/bin/sudo \
     && chmod 4755 /usr/bin/sudo \
     && echo "${USER} ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/${USER} \
-    && groupadd -g ${UUCP_GID} uucp_arch && usermod -aG uucp_arch ${USER} \
+    && groupadd -g ${UUCP_GID} uucp_arch \
+    && usermod -aG uucp_arch ${USER} \
+    && usermod -aG dialout ${USER} \
+    && usermod -aG plugdev ${USER} \
     && git config --global --add safe.directory / \
-    && curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh -s 1.4.0
+    && curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh -s 1.4.0 \
+    && curl -fsSL https://raw.githubusercontent.com/platformio/platformio-core/develop/platformio/assets/system/99-platformio-udev.rules | tee /etc/udev/rules.d/99-platformio-udev.rules \
+    && service udev restart
 
 USER ${USER}
 
-ENTRYPOINT [ "/opt/esp/entrypoint.sh" ]
+WORKDIR /home/debian
 
-CMD ["/bin/bash", "-c"]
+RUN curl -fsSL -o get-platformio.py https://raw.githubusercontent.com/platformio/platformio-core-installer/master/get-platformio.py \
+    && python3 get-platformio.py \
+    && rm get-platformio.py
