--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,20 +1,15 @@
 {
-	"name": "ESP-IDF QEMU",
+	"name": "Hellocubic OpenFirmware",
 	"build": {
 		"dockerfile": "Dockerfile"
 	},
 	"customizations": {
 		"vscode": {
 			"settings": {
-				"terminal.integrated.defaultProfile.linux": "bash",
-				"idf.espIdfPath": "/opt/esp/idf",
-				"idf.toolsPath": "/opt/esp",
-				"idf.gitPath": "/usr/bin/git",
-				"idf.showWelcome": false
+				"terminal.integrated.defaultProfile.linux": "bash"
 			},
 			"extensions": [
-				"espressif.esp-idf-extension",
-				"espressif.esp-idf-web",
+				"platformio.platformio-ide",
 				"ms-vscode.cpptools",
 				"ms-vscode.cpptools-extension-pack",
 				"redhat.vscode-yaml",
@@ -26,19 +21,18 @@
 		"--name=hellocubic-openfirmware-dev",
 		"--hostname=hellocubic-openfirmware-dev",
 		"-v",
-		"${env:HOME}/.ssh:/home/ubuntu/.ssh:ro",
+		"${env:HOME}/.ssh:/home/debian/.ssh:ro",
 		"-v",
-		"${env:HOME}/.gnupg:/home/ubuntu/.gnupg:ro",
+		"${env:HOME}/.gnupg:/home/debian/.gnupg:ro",
 		"-v",
 		"/run/udev:/run/udev",
 		"-v",
 		"/etc/localtime:/etc/localtime:ro",
 		"-v",
 		"/dev:/dev",
+		"-v",
+		"${env:HOME}/.platformio:/home/debian/.platformio",
 		"--device-cgroup-rule=c 166:* rmw",
 		"--device-cgroup-rule=c 188:* rmw"
-	],
-	"remoteEnv": {
-		"CMAKE_GENERATOR": "Ninja"
-	}
+	]
 }
