--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -44,4 +44,8 @@ WORKDIR /home/debian
 
 RUN curl -fsSL -o get-platformio.py https://raw.githubusercontent.com/platformio/platformio-core-installer/master/get-platformio.py \
     && python3 get-platformio.py \
-    && rm get-platformio.py
+    && rm get-platformio.py \
+    && echo "alias build='pio run'" >> /home/${USER}/.bashrc \
+    && echo "alias flash='pio run --target upload'" >> /home/${USER}/.bashrc \
+    && echo "alias flashfs='pio run --target uploadfs'" >> /home/${USER}/.bashrc \
+    && echo "alias monitor='pio device monitor'" >> /home/${USER}/.bashrc
