--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,14 +55,23 @@ jobs:
       - name: Install dependencies
         run: pio lib install
 
-      - name: Build project
-        run: pio run --environment all || pio run && pio run --target buildfs
+      - name: Build firmware and filesystem
+        run: pio run && pio run --target buildfs
+
+      - name: List .pio contents
+        run: |
+          echo 'Listing .pio directory:'
+          if [ -d .pio ]; then
+            find .pio -maxdepth 6 -type f -print || true
+          else
+            echo '.pio directory not found'
+          fi
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: build-output
-          path: .pio/**
+          path: .pio
 
   package:
     runs-on: ubuntu-latest
