--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,7 @@ jobs:
         with:
           name: build-output
           path: .pio
+          include-hidden-files: true
 
   package:
     runs-on: ubuntu-latest
